--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.0",
+    "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
+    "style-loader": "^3.3.3",
     "webpack": "^5.75.0",
     "webpack-dev-server": "^4.11.1"
   },
