--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^21.0.0",
     "three": "^0.147.0",
     "webpack-cli": "^5.0.1"
   },
