feat: add the flip and stretch animation for little man

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@tweenjs/tween.js": "^21.0.0",
+    "stats.js": "^0.17.0",
     "three": "^0.147.0",
     "webpack-cli": "^5.0.1"
   },
